use jdk httpclient instead of old UELConnection